# RAG-examples

./: .gitignore  README.md  example.env  gemini+streamlit.py  gemini+vercelsitemap.py  gemini-localembed.py  pyproject.toml
app/: gemini+huggingapi.py  gemini+websedeta.py  normal-openai.py
